exam_project_corrections

--- a/Exam_maket/fotogalereya.html
+++ b/Exam_maket/fotogalereya.html
@@ -17,7 +17,7 @@
 		<div class="view">
 			<header>
 				 <div class="content">
-					 <h1><a href="index.html" class="logo" title="logo">МастерСтрой</a></h1>
+					 <h1><a href="index.html" class="logo" title="logo" style="margin-top: 20px;">МастерСтрой</a></h1>
 					 <nav>
 						 <a href="index.html">главная</a>
 						 <a href="aboutus.html">о нас</a>
@@ -138,7 +138,7 @@
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
 						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
-						<ul>
+						<ul style="margin-left: -32px;">
 							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
