--- a/Exam_maket/index.html
+++ b/Exam_maket/index.html
@@ -17,7 +17,7 @@
 		<div class="view">
 			<header>
 				 <div class="content">
-					 <h1><a href="index.html" class="logo" title="logo">МастерСтрой</a></h1>
+					 <h1><a href="index.html" class="logo" title="logo" style="margin-top: 20px;">МастерСтрой</a></h1>
 					 <nav>
 						 <a href="index.html" class="chosen">главная</a>
 						 <a href="aboutus.html">о нас</a>
@@ -30,7 +30,7 @@
 			</header>		
 			<div class="advert">
 				<div class="banner">
-					<img src="images/banner.jpg" alt="banner" style="width:100%;">
+					<img src="images/banner.jpg" alt="banner" style="width:60%;">
 				<div class="content">
 					<h3 style="color: black;">Тротуарная плитка</h3>
 					<p style="color: black;">Вам нужна качественная и недорогая тротуарная плитка в Волоколамске? Мы готовы предложить отличную возможность приобрести современные модели с высокими показателями эстетики и механической стойкости напрямую от производителя – компании «Мастер Строй».</p>
@@ -74,7 +74,7 @@
 						<div class="type">
 							<h3 class="white">История компании</h3>
 							<img src="images/oNasPlitka.png" title="oNasPlitka" alt="oNasPlitka"></a>
-							<p class="short" style="color: black;">Наша Производственная компания МастерСтрой получила свое начало от строительной компании "Все о стройке". Мы продавали в больших объемах тротуарную плитку и успели поработать почти со всеми беларускими производителями.</p>
+							<p class="short" style="color: black;">Наша роизводственная компания МастерСтрой получила свое начало от строительной компании "Все о стройке". Мы продавали в больших объемах тротуарную плитку и успели поработать почти со всеми беларускими производителями.</p>
 							<button><a href="aboutus.html" target=_blank>подробнее</a></button>
 						</div>
 						<div class="type">
@@ -93,6 +93,7 @@
 					<p class="short" style="color: black;">Мы производим тротуарную плитку с 2011 г. под юр. лицом ЧТПУП “Мастерстрой”. В 2021 году мы завезли на территорию Беларуси новую польскую технологию производства и запустили новый бренд GARD под отдельным юр. лицом ООО “Производственная компания Мастерстрой”.</p>
 					<img src="images/banner_bottom.jpg" alt="banner_plit" title="banner_plit">
 					<p class="short" style="color: black;">Также, благодаря отделу логистики, мы снимаем с Вас заботу о доставке и разгрузке, делаем это максимально быстро и за минимальные деньги. Звоните или оставляйте заявку на сайте, и убедитесь в этом сами.</p>
+					<button><a href="kontakty.html" target=_blank>Контакты</a></button>
 				</div>
 			</div>
 			<footer>
@@ -120,7 +121,7 @@
 					</div>
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
-						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
+						<p style="color: white;">г. Минск, ул. Брикета 1, 1-й этаж,офис 111. </p>
 						<ul>
 							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
