--- a/Exam_maket/kontakty.html
+++ b/Exam_maket/kontakty.html
@@ -17,7 +17,7 @@
 		<div class="view">
 			<header>
 				 <div class="content">
-					 <h1><a href="index.html" class="logo" title="logo">МастерСтрой</a></h1>
+					 <h1><a href="index.html" class="logo" title="logo" style="margin-top: 20px;">МастерСтрой</a></h1>
 					 <nav>
 						 <a href="index.html">главная</a>
 						 <a href="aboutus.html">о нас</a>
@@ -31,7 +31,7 @@
             <div class="content">
                 <div class="baseinfo">
                     <h2 class="dashed">Контакты</h2>
-                    <p class="description" style="color: black;">Прием заявок ежедневно с 08 до 23.00 | Производство пн-пт с 09.00 до 18.00</p>
+                    <p class="description" style="color: black;">Прием заявок ежедневно с 08.00 до 23.00 | Производство пн-пт с 09.00 до 18.00</p>
                 </div>
                 <div class="map">
 					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af14b6822a9aa448a67029a9bc365d18efd2b6db7bf84724f2e5cda91ca82655a&amp;width=1250&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
@@ -73,8 +73,8 @@
 					</div>
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
-						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
-						<ul>
+						<p style="color: white;">г. Минск, ул. Брикета 1, 1-й этаж, офис 111.</p>
+						<ul style="margin-left: -32px;">
 							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
