--- a/Exam_maket/vidy.html
+++ b/Exam_maket/vidy.html
@@ -17,13 +17,13 @@
 		<div class="view">
 			<header>
 				 <div class="content">
-					 <h1><a href="index.html" class="logo" title="logo">МастерСтрой</a></h1>
+					 <h1><a href="index.html" class="logo" title="logo" style="margin-top: 20px;">МастерСтрой</a></h1>
 					 <nav>
 						 <a href="index.html" >главная</a>
 						 <a href="aboutus.html">о нас</a>
 						 <a href="classes.html" class="chosen">виды</a>
 						 <a href="fotogalereya.html">фотогалерея</a>
-						 <a href="contacts.html">контакты</a>
+						 <a href="kontakty.html">контакты</a>
 					 </nav>	
 					 <div class="clear"></div>
 				 </div>
@@ -36,7 +36,7 @@
                 <div class="sectioncontainer">
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Вибропрессованная</h3>
+                            <h3>Вибропрессованная</h3>
                             <p class="short" style="color: black;">Получается методом прессования с вибрационной утрамбовкой смеси бетона с водой. Вибротрамбовка полностью удаляет воздушные пузырьки из раствора, уплотняя и повышая прочность застывшей массы. Получается плотный продукт, выдерживающий большие нагрузки, поэтому он подходит для мощения парковочных мест, может укладываться в северных регионах.</p>
                         </div>
                         <div class="mainsection">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Вибролитая</h3>
+                            <h3>Вибролитая</h3>
                             <p class="short" style="color: black;">Это более простая технология: раствор заливается в формы, установленные на вибрирующей поверхности. Вибролитая бетонная плитка выдерживает меньшие нагрузки, чем предыдущий вариант. Она подходит для создания пешеходных дорожек, обустройства придомовой территории частных домов.</span></p>
                         </div>
                         <div class="mainsection">
@@ -59,7 +59,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Гиперпрессованная</h3>
+                            <h3>Гиперпрессованная</h3>
                             <p class="short" style="color: black;">Раствор прессуется под большим давлением на высокотехнологичных гидропрессах. В результате все компоненты склеиваются между собой (похоже на холодную сварку), получается сверхпрочный плиточный материал. При производстве данной плитки используется гидропресс.</p>
                         </div>
                         <div class="mainsection">
@@ -71,7 +71,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Клинкерная плитка</h3>
+                            <h3>Клинкерная плитка</h3>
                             <p class="short" style="color: black;">Клинкерные разновидности тротуарной плитки наиболее твердые из всех известных на рынке. Они изготавливаются из клинкера – керамики из особых сортов глины, высокая прочность которой достигается методом обжига при температуре выше 1200 градусов C. Это достаточно дорогой материал. Благородный вид, ударостойкость, низкое водопоглощение – основные достоинства продукта. Клинкер обладает антискользящим эффектом, обеспечивающим прочное сцепление обуви с поверхностью даже во время дождя.</p>
                         </div>
                         <div class="mainsection">
@@ -83,7 +83,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Резиновая плитка</h3>
+                            <h3>Резиновая плитка</h3>
                             <p class="short" style="color: black;">Резиновое тротуарное покрытие пластичное, дешевое, безопасное в пользовании. Оно подойдет для оформления детских площадок, участков, где люди занимаются физкультурой и спортом. Продукция делается из резиновой крошки с фракцией от 0,6 до 3 мм. По технологии прессования она делится на горячепресованную и холоднопресованную.</p>
                         </div>
                         <div class="mainsection">
@@ -95,7 +95,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Полимерно-песчаная плитка</h3>
+                            <h3>Полимерно-песчаная плитка</h3>
                             <p class="short" style="color: black;">Другое название полимерно-песчаной тротуарной плитки – пластиковая. Она производится из песка с добавлением клейких полимеров и красителей, без использования цемента.</p>
                         </div>
                         <div class="mainsection">
@@ -107,7 +107,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Гранитная плитка</h3>
+                            <h3>Гранитная плитка</h3>
                             <p class="short" style="color: black;">Гранитная брусчатка делается из натурального камня. Стандартные размеры составляют 100*100*50 мм, вес природного материала немалый – около 100 кг/ кв. м. Тяжеловесный, прочный, привлекательный камень позволяет мостить придомовые или общественные участки на века. Кроме того, в отличие от других моделей тротуарного покрытия гранитное можно снимать с грунта без опасений его повреждения, а затем укладывать заново.</p>
                         </div>
                         <div class="mainsection">
@@ -119,7 +119,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Колотая гранитная плитка</h3>
+                            <h3>Колотая гранитная плитка</h3>
                             <p class="short" style="color: black;">Это прямоугольный параллелепипед, грани которого образованы методом скола цельного камня, поэтому они имеют рваную структуру. В результате мощения дорожки колотым гранитом она приобретает естественный вид: швы между камнем широкие, а поверхность обладает естественными неровностями. Колотая плиточная продукция подойдет для облагораживания домов, оформленных в исторических стилях или кантри.</p>
                         </div>
                         <div class="mainsection">
@@ -131,7 +131,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Пилено-колотая гранитная плитка</h3>
+                            <h3>Пилено-колотая гранитная плитка</h3>
                             <p class="short" style="color: black;">У этих моделей боковые грани спилены, поэтому они гладкие, а поверхность неровная колотая. Швы у такой композиции тонкие, так как отдельные элементы укладываются вплотную, при этом сама дорожка получается с естественными неровностями природного камня.</p>
                         </div>
                         <div class="mainsection">
@@ -143,7 +143,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Полнопиленая гранитная плитка</h3>
+                            <h3>Полнопиленая гранитная плитка</h3>
                             <p class="short" style="color: black;">Грани полнопиленного гранита спиливаются со всех сторон, поэтому он не имеет рваных плоскостей с естественным рельефом. Этот гладкий материал дает на участке геометрически идеальные по форме композиции. Стоит полнопиленная брусчатка дороже продукта с колотыми гранями.</p>
                         </div>
                         <div class="mainsection">
@@ -155,7 +155,7 @@
                     </div>
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3 style="margin-left: 8px;">Полнопиленная полированная гранитная плитка</h3>
+                            <h3>Полнопиленная полированная гранитная плитка</h3>
                             <p class="short" style="color: black;">Ее верхняя поверхность полируется до блеска. В результате обработки получается прямоугольный параллелепипед идеальной формы с глянцевым полированным блеском на верхней плоскости.</p>
                         </div>
                         <div class="mainsection" style="margin-bottom: 70px;">
@@ -193,7 +193,7 @@
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
 						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
-						<ul>
+						<ul style="margin-left: -32px;">
 							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
