--- a/Exam_maket/aboutus.html
+++ b/Exam_maket/aboutus.html
@@ -17,7 +17,7 @@
 		<div class="view">
 			<header>
 				 <div class="content">
-					 <h1><a href="index.html" class="logo" title="logo">МастерСтрой</a></h1>
+					 <h1><a href="index.html" class="logo" title="logo" style="margin-top: 20px;" >МастерСтрой</a></h1>
 					 <nav>
 						<a href="index.html">главная</a>
 						<a href="aboutus.html" class="chosen">о нас</a>
@@ -39,7 +39,7 @@
 							<img src="images/aboutus/Egor.jpg" class="positionleft" alt="Egor" title="Egor">
 							<h3>Егор Матусевич</h3>
 							<h4>Владелец, директор, маркетолог, администратор сайта masterstroy.by, завхоз, водитель и немного дизайнер.</h4>
-							<p class="short" style="color: black;">Столярный опыт отсутствует, нет, конечно, что -то умею, но, это смотря с кем, сравнивать. Если бы волей случая, не оказался в этом проекте, то не познакомился бы с замечательными людьми, Профессионалами своего дела, которые создают неповторимую атмосферу нашей школы-мастерской, в которую хочется возвращаться.</p>
+							<p class="short" style="color: black;margin-right:10px;">Столярный опыт отсутствует, нет, конечно, что -то умею, но, это смотря с кем, сравнивать. Если бы волей случая, не оказался в этом проекте, то не познакомился бы с замечательными людьми, Профессионалами своего дела, которые создают неповторимую атмосферу нашей школы-мастерской, в которую хочется возвращаться.</p>
 							<p class="short" style="color: black;">Наша команда очень старается, чтобы столярная школа жила и развивалась. Нам очень важна и нужна ваша поддержка. Даже просто придя к нам в мастерскую на бесплатное ознакомительное посещение, вы поддерживаете в нас уверенность, что мы делаем что-то нужное.</p>
 							<div class="clear"></div>
 						</div>
@@ -95,7 +95,7 @@
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
 						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
-						<ul>
+						<ul style="margin-left: -32px;">
 							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
