--- a/Exam_maket/fotogalereya.html
+++ b/Exam_maket/fotogalereya.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/normalise.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
@@ -26,13 +26,13 @@
 						 <a href="kontakty.html" >контакты</a>
 					 </nav>	
 					 <div class="clear"></div>
-				 </div><!-- .content -->
+				 </div>
 			</header>		
             <div class="content">
                 <div class="baseinfo">
                     <h2 class="dashed">Фотогалерея</h2>
                     <p class="description" style="color: black;">Знакомство с видами тротуарной плитки поможет потребителю найти оптимальный вариант для облагораживания придомовой территории, создания садово-парковых или пешеходных дорожек, площадок для парковки машин.</p>
-                </div><!-- .baseinfo-->
+                </div>
                 <div class="gallerybox">
                     <ul class="photos">
                         <li class="leftcolumn">
@@ -113,12 +113,13 @@
                 </div>
             </div>
             <footer>
-				<div class="line"></div><!-- .line -->
+				<div class="line"></div>
 				<div class="content">
+					<div class="flex" style="display:flex;">
 					<div class="shortinfo">
 						<h3 class="white">О нас</h3>
 						<p style="color: white;">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Реквизиты</h3>
 						<p style="color: white;">ООО «Производственная компания Мастерстрой»<br>
@@ -126,7 +127,7 @@
 							Р/С: : BY00 BPSB 0000 0000 0000 0000 0000<br>
 							В ОАО «СБЕР БАНК» БИК BPSBBY2X в BYN<br>
 							Банк: BY43BPSB30123273720179330000</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Рассылка</h3>
 						<p style="color: white;">Подпишитесь на нашу рассылку, чтобы получать информацию о проходящих акциях регулярно!</p>
@@ -134,17 +135,18 @@
 							<input type="text" style="color:rgb(166,175,176); background-color: white;" name="e-mail" placeholder="ваш e-mail" class="borderless">
 							<button type="submit" class="btn btn-success" style="text-align: right; width: auto;">Подписаться</button>
 						</form>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
-						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
+						<p style="color: white;">г. Минск, ул. Брикета 1, 1-й этаж,офис 111. </p>
 						<ul style="margin-left: -32px;">
 							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="clear"></div>
-				</div><!-- .content -->		
+				</div>
+				</div>	
 			</footer>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
