--- a/Exam_maket/kontakty.html
+++ b/Exam_maket/kontakty.html
@@ -51,6 +51,7 @@
             <footer>
 				<div class="line"></div>
 				<div class="content">
+					<div class="flex" style="display:flex;">
 					<div class="shortinfo">
 						<h3 class="white">О нас</h3>
 						<p style="color: white;">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.</p>
@@ -73,13 +74,14 @@
 					</div>
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
-						<p style="color: white;">г. Минск, ул. Брикета 1, 1-й этаж, офис 111.</p>
+						<p style="color: white;">г. Минск, ул. Брикета 1, 1-й этаж,офис 111. </p>
 						<ul style="margin-left: -32px;">
 							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
 					</div>
 					<div class="clear"></div>
+				</div>
 				</div>	
 			</footer>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
