Exam_project_update

--- a/Exam_maket/index.html
+++ b/Exam_maket/index.html
@@ -74,14 +74,14 @@
 						<div class="type">
 							<h3 class="white">История компании</h3>
 							<img src="images/oNasPlitka.png" title="oNasPlitka" alt="oNasPlitka"></a>
-							<p class="short" style="color: black;">Наша роизводственная компания МастерСтрой получила свое начало от строительной компании "Все о стройке". Мы продавали в больших объемах тротуарную плитку и успели поработать почти со всеми беларускими производителями.</p>
+							<p class="short" style="color: black;">Наша производственная компания МастерСтрой получила свое начало от строительной компании "Все о стройке". Мы продавали в больших объемах тротуарную плитку и успели поработать почти со всеми беларускими производителями.</p>
 							<button><a href="aboutus.html" target=_blank>подробнее</a></button>
 						</div>
 						<div class="type">
 							<h3 class="white">Контакты</h3>
 							<img src="images/evropa.jpg" title="evropa" alt="evropa"></a>
 							<p class="short" style="color: black;">ШОУ-РУМы находятся в г .Минск, ул. Сурганова, 57Б (ТЦ ЕВРОПА), 5 этаж, оф.160 и 6 этаж, офис 186. Работаем с 9:00 до 18:00 пн-пт. Если Вы планируете приехать в шоу-рум для оплаты и заключения договора, возможен выезд дежурного специалиста по продажам в шоу-рум.</p>
-							<button><a href="aboutus.html" target=_blank>подробнее</a></button>
+							<button><a href="kontakty.html" target=_blank>подробнее</a></button>
 						</div>
 						<div class="clear"></div>
 					</div>
